Fix #69 improve contrast for rank 8/9 use grey text on yellow backgrounds.

--- a/styles.css
+++ b/styles.css
@@ -43,10 +43,12 @@ span.plagiarismreport span.rank7 {
 
 span.plagiarismreport span.rank8 {
        background: #ffea59;
+       color: #333;
 }
 
 span.plagiarismreport span.rank9 {
        background: #ffff9d;
+       color: #333;
 }
 
 span.plagiarismreport span.rank10 {
